[tool.poetry]
name = "fastqueue"
version = "0.1.0"
description = "Simple queue system based on FastAPI and PostgreSQL"
authors = ["Allisson Azevedo <allisson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
typer = {extras = ["all"], version = "^0.6.1"}
python-json-logger = "^2.0.4"
rocketry = "^2.3.0"
prometheus-fastapi-instrumentator = "^5.9.1"
psycopg2 = "^2.9.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
requests = "^2.28.1"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-vvv --cov=fastqueue --cov-report=term-missing"

[tool.isort]
profile = "black"
line_length = 110
force_alphabetical_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
