[tool.poetry]
name = "fastqueue"
version = "0.1.0"
description = "Simple queue system based on FastAPI and PostgreSQL"
authors = ["Allisson Azevedo <allisson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0"
uvicorn = {extras = ["standard"], version = "^0"}
SQLAlchemy = "^1"
alembic = "^1"
typer = {extras = ["all"], version = "^0"}
python-json-logger = "^2"
rocketry = "^2"
prometheus-fastapi-instrumentator = "^5"
psycopg2-binary = "^2"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pytest-cov = "^4"
pre-commit = "^3"
requests = "^2"
factory-boy = "^3"
httpx = "^0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.1"
addopts = "-vvv --cov=fastqueue --cov-report=term-missing"

[tool.isort]
profile = "black"
line_length = 110
force_alphabetical_sort_within_sections = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
